--- a/package.json
+++ b/package.json
@@ -10,18 +10,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "grunt": "^1.0.3",
-    "grunt-contrib-cssmin": "^3.0.0",
-    "grunt-contrib-sass": "^1.0.0",
-    "grunt-contrib-uglify": "^4.0.0",
-    "grunt-contrib-watch": "^1.1.0",
-    "grunt-sass": "^3.0.2",
-    "load-grunt-config": "^1.0.1",
-    "load-grunt-tasks": "^4.0.0",
+    "babel-core": "^6.26.3",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "gulp": "^4.0.0",
+    "gulp-cssmin": "^0.2.0",
+    "gulp-rename": "^1.4.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-uglify": "^3.0.2",
     "node-sass": "^4.11.0"
   },
   "dependencies": {
-    "ruby": "^0.6.1",
-    "sass": "^1.17.2"
+    "del": "^4.0.0"
   }
 }
